--- a/package.json
+++ b/package.json
@@ -3,24 +3,22 @@
   "license": "MIT",
   "version": "0.13.0",
   "author": "ChoGathK",
-  "description": "🔍 Provides easy-to-use validation methods and decorators.",
+  "description": "🔍 provides easy-to-use validation methods and decorators.",
   "homepage": "https://github.com/vodyani/validator#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/vodyani/validator.git"
+  },
+  "bugs": {
+    "url": "https://github.com/vodyani/validator/issues"
   },
   "keywords": [
     "vodyani",
     "nodejs",
     "validator",
     "class-validator",
-    "javascript",
-    "typescript",
     "npm-package"
   ],
-  "bugs": {
-    "url": "https://github.com/vodyani/validator/issues"
-  },
   "files": [
     "package.json",
     "README.MD",
@@ -29,25 +27,27 @@
   ],
   "main": "dist/index.js",
   "scripts": {
-    "patch": "npm version patch",
-    "minor": "npm version minor",
-    "major": "npm version major",
-    "install:all": "npm i && npm i @vodyani/eslint-config -D && npx husky install",
+    "local": "npm i && npm i @vodyani/eslint-config -D && npx husky install",
     "build": "rm -rf dist && tsc",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "lint": "eslint ./src ./test && tsc",
     "lint:fix": "eslint --fix --ext .ts src/ test/",
     "lint:html-report": "eslint ./src ./test -f html -o eslint-report.html",
-    "lint:json-report": "eslint ./src ./test -f json -o eslint-report.json"
+    "lint:json-report": "eslint ./src ./test -f json -o eslint-report.json",
+    "release": "npx semantic-release"
   },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
+  "publishConfig": {
+    "access": "public"
   },
   "eslintConfig": {
     "extends": "@vodyani"
+  },
+  "release": {
+    "extends": "@vodyani/semantic-release"
+  },
+  "commitlint": {
+    "extends": "@commitlint/config-conventional"
   },
   "jest": {
     "testEnvironment": "node",
@@ -64,7 +64,7 @@
     ]
   },
   "dependencies": {
-    "@vodyani/transformer": "^0.5.3",
+    "@vodyani/transformer": "^0.6.0",
     "class-validator": "0.13.2",
     "lodash": "4.17.21",
     "reflect-metadata": "^0.1.13"
@@ -77,11 +77,12 @@
     "@commitlint/cli": "16.2.3",
     "@commitlint/config-conventional": "16.2.1",
     "@nestjs/common": "8.4.4",
-    "@nestjs/swagger": "^5.2.1",
+    "@nestjs/swagger": "5.2.1",
     "@types/jest": "27.4.1",
     "@types/lodash": "4.14.182",
-    "@types/node": "16.11.26",
-    "@vodyani/eslint-config": "1.0.9",
+    "@types/node": "16.11.28",
+    "@vodyani/eslint-config": "^1.0.10",
+    "@vodyani/semantic-release": "1.1.1",
     "husky": "7.0.4",
     "jest": "27.5.1",
     "ts-jest": "27.1.4",
